fix: FITZ-55 - lack of contrast UI components outline edit

--- a/resources/sass/_extend-bootstrap.scss
+++ b/resources/sass/_extend-bootstrap.scss
@@ -12,12 +12,8 @@
 }
 
 .btn:focus,
-.form-check-input:focus,
 .form-control:focus,
-.form-control:focus-visible {
-    border-width: 3px;
-    border-color: rgb(37, 77, 235);
-    box-shadow: none;
-    // box-shadow: 0 0 0 0.25rem rgba(37, 77, 235, .55);
-    outline: 0;
+.form-check-input:focus {
+    box-shadow: 0 0 0 0.25rem rgb(37, 77, 235);
+    outline: 0.25rem solid rgb(37, 77, 235);
 }
